zeit.cms changes
================

1.41.1 (unreleased)
-------------------

- Using versions from the ZTK.


1.41.0 (2010-03-10)
-------------------

- Fix that text fields which are mapped to xml nodes still work even when there
  is no py:pytype and the contents is an integer (#6824).

- Change the way asset interfaces are registered. This fixes isolation problems
  during tests (#6712).

- Checkin-Conflict-Resolver wird mit HTTP-Status 200 ausgeliefert, statt bisher
  500 (#6392).

- Checkin-Conflict-Resolver checkt jetzt auch Korrekturen korrekt ein (#6880).

- Die Felder CAP-Kontext und CAP-Titel auf allen Objekten mit Standardmetadaten
  verfügbar gemacht (#6923).

- Kein ``alert()`` mehr bei Nicht-Firefox-Browsern (#6935).

- Relaunch-Preview-Icon an- und abschaltbar (#6878).

- Syndication-Tab und dezentrale Syndizierung an- und abschaltbar (#6878).

- Alte CenterPage komplett entfernt (#6878).

- Channel sind keine vollwertigen Inhaltstypen mehr, wenn das dezentrale
  Syndizieren ausgeschaltet ist (#6878).

- Metadatum "Sub-Typ" entfernt (#6114).

1.40.3 (2010-02-23)
-------------------

- Site settings' working directory creator ignores empty path elements
  correctly now.


1.40.2 (2010-01-16)
-------------------

- ITZInfo-Adapter für alle Requests registriert, nicht nur für BrowserRequest.


1.40.1 (2010-01-16)
-------------------

- Index-Updater ``load_references`` repariert (no interaction, #6713).

- Security-Problem bei Bild-XMLReferenz behoben.

1.40.0 (2009-12-18)
-------------------

- Favicon aktualisiert.
- Wenn im XML für die Keywords ein Fehler ist, wird das Laden abgebrochen und
  die alte Fassung behalten (#6046).
- Last-semantic-change wird direkt beim Anlegen eines Objektes gestzt, nicht
  erst beim Einchecken (#6476).
- Neue Option »Schlagzeile«.
- Bilder, die aus Bildergruppen kommen, übernehmen die expires-Einstellung der
  Gruppe (#6662).
- Ressort wird in die XML-Referenz (z. B. in Feeds) übernommen (#6650).

Technische Änderungen