@@ -1,11 +1,16 @@
 # Copyright (c) 2010 gocept gmbh & co. kg
 # See also LICENSE.txt
 
+import socket
 import grokcore.component
 import httplib
+import logging
 import zeit.cms.repository.interfaces
 import zeit.purge.interfaces
 import zope.app.appsetup.product
+
+
+log = logging.getLogger(__name__)
 
 
 class Purge(grokcore.component.Adapter):
@@ -23,11 +28,15 @@ class Purge(grokcore.component.Adapter):
         url = self.context.uniqueId.replace(
             zeit.cms.interfaces.ID_NAMESPACE, public_prefix, 1)
         for server in servers:
+            log.info("Purging %s on %s", url, server)
             http = httplib.HTTPConnection(server, timeout=timeout)
-            http.request('PURGE', url)
-            response = http.getresponse()
-            response.read()
+            try:
+                http.request('PURGE', url)
+                response = http.getresponse()
+                response.read()
+            except socket.error, e:
+                raise zeit.purge.interfaces.PurgeError(server, e)
             if response.status != 200:
-                raise httplib.HTTPException(
-                    "Server %s returned status %s (%s)" % (
-                        server, response.status, response.reason))
+                raise zeit.purge.interfaces.PurgeError(
+                    server, "Got status %s (%s)" % (
+                        response.status, response.reason))
